More province glp, path glp, patch mission vanngeahim

--- a/3362815204/localisation/1me_text_l_english.yml
+++ b/3362815204/localisation/1me_text_l_english.yml
@@ -32,6 +32,15 @@ custom_celmador_nimscodd_issue.3.d:0 "Nimscodd Refuse our proposal! We will take
 custom_celmador_nimscodd_issue.3.a:0 "WAAAAAAAAR (Warning it will call All allies of Nimscodd !)"
 custom_celmador_nimscodd_issue.3.b:0 "We are not ready for war yet"
 
+
+custom_heir_boost.1.t:0 "Heir boost"
+custom_heir_boost.1.d:0 "Heir boost"
+custom_heir_boost.1.A:0 "Heir boost"
+
+custom_heir_boost.2.t:0 "Heir boost pearlsedge"
+custom_heir_boost.2.d:0 "Heir boost pearlsedge"
+custom_heir_boost.2.A:0 "Heir boost pearlsedge"
+
 select_edict_for_all_province_title:0 "Select Edict for All Provinces"
 select_edict_for_all_province_desc:0 "This decision will allow you to select an edict to be applied to all provinces in your country. Nothing is more efficient than enacting a decree to bypass the congress."
 custom_edict_for_all_province_event.1.t:0 "Enact a country Edict."
