--- a/3362815204/localisation/1me_text_l_french.yml
+++ b/3362815204/localisation/1me_text_l_french.yml
@@ -32,6 +32,14 @@ custom_celmador_nimscodd_issue.3.d:0 "Nimscodd a rejeté notre proposition ! Nou
 custom_celmador_nimscodd_issue.3.a:0 "GUERRE !(Attention cela appellera tous les alliés de Nimscodd)"
 custom_celmador_nimscodd_issue.3.b:0 "Nous ne sommes pas encore prêts pour la guerre."
 
+custom_heir_boost.1.t:0 "heritier boost"
+custom_heir_boost.1.d:0 "heritier boost"
+custom_heir_boost.1.A:0 "heritier boost"
+
+custom_heir_boost.2.t:0 "heritier boost pearlsedge"
+custom_heir_boost.2.d:0 "heritier boost pearlsedge"
+custom_heir_boost.2.A:0 "heritier boost pearlsedge"
+
 select_edict_for_all_province_title:0 "Sélectionner un Édit pour Toutes les Provinces"
 select_edict_for_all_province_desc:0 "Cette décision vous permettra de sélectionner un édit à appliquer à toutes les provinces de votre pays. Rien n'est plus efficace que de promulguer un décret pour contourner le congrès."
 custom_edict_for_all_province_event.1.t:0 "Promulguer un Édit National."
