--- a/3362815204/localisation/GLP_l_english.yml
+++ b/3362815204/localisation/GLP_l_english.yml
@@ -950,7 +950,14 @@
  glp_save_edit_events.PROVMODIFADDA019:0 "Add debuff less tolerance of other"
  glp_save_edit_events.PROVMODIFADDA020:0 "Bro is doomed"
  glp_save_edit_events.PROVMODIFADDA022:0 "Add 5 unrest on province"
-
+ glp_save_edit_events.PROVMODIFADDA023:0 "Add bonus stab cost"
+ glp_save_edit_events.PROVMODIFADDA024:0 "Add bonus dev cost"
+ glp_save_edit_events.PROVMODIFADDA025:0 "Add bonus colonial range"
+ glp_save_edit_events.PROVMODIFADDA026:0 "Add bonus ship trade power"
+ glp_save_edit_events.PROVMODIFADDA027:0 "Add bonus ara siphoning"
+ glp_save_edit_events.PROVMODIFADDA028:0 "Add pearlsedge bonus"
+ glp_save_edit_events.PROVMODIFADDA029:0 "Add 666 heir"
+ glp_save_edit_events.PROVMODIFADDA030:0 "Add Reform Resistance bonus"
 
  glp_save_edit_events.EVTNAME44:0 "Removing a modifier"
  glp_save_edit_events.EVTDESC44:0 "Removing a modifier from the province of [From.GetName]"
@@ -976,7 +983,15 @@
  glp_save_edit_events.PROVMODIFREMOVEA019:0 "Remove minor naval FL"
  glp_save_edit_events.PROVMODIFREMOVEA020:0 "Remove debuff less tolerance of other"
  glp_save_edit_events.PROVMODIFREMOVEA021:0 "Remove u r doomed bro"
- glp_save_edit_events.PROVMODIFREMOVEA021:0 "Remove 5 unrest on province"
+ glp_save_edit_events.PROVMODIFREMOVEA022:0 "Remove 5 unrest on province"
+ glp_save_edit_events.PROVMODIFREMOVEA023:0 "Remove bonus stab cost"
+ glp_save_edit_events.PROVMODIFREMOVEA024:0 "Remove bonus dev cost"
+ glp_save_edit_events.PROVMODIFREMOVEA025:0 "Remove bonus colonial range"
+ glp_save_edit_events.PROVMODIFREMOVEA026:0 "Remove bonus ship trade power"
+ glp_save_edit_events.PROVMODIFREMOVEA027:0 "Remove bonus ara siphoning"
+ glp_save_edit_events.PROVMODIFREMOVEA028:0 "Remove pearlsedge bonus"
+ glp_save_edit_events.PROVMODIFREMOVEA029:0 "Remove 666 heir"
+ glp_save_edit_events.PROVMODIFREMOVEA030:0 "Remove Reform Resistance bonus"
 
  glp_gm_events.EVTNAME5:0 "A §Ggreen§! opportunity"
  glp_gm_events.EVTDESC5:0 "[Root.Monarch.GetTitle]! A slave trade is booming after the victory of the greentide. Slavery has been pronounced as the main punishment for the orcs. Slaves are flowing the markets it's perfect opportunity to have a cheep labor or a fancy orcish slave at the house for almost nothing !"
@@ -1643,6 +1658,14 @@
  glp_bad_tolerance_of_other:0 "hérétique et païen au buché"
  glp_doomed:0 "u r doomed Bro!"
  glp_malus_unrest_5:0 "Peuple révolté"
+glp_stab_cost_bonus:0 "Stab cost bonus"
+glp_dev_cost_bonus:0 "Dev cost bonus"
+glp_colonial_range_bonus:0 "Colo range bonus" 
+glp_ship_trade_bonus:0 "Ship trade bonus" 
+glp_yearly_tax:0 "Ara siphoning" 
+glp_pearl_of_abyss:0 "Pearl of abyss"
+glp_resistance_reform:0 "Reform Resistance bonus"
+
 
  A1A:0 "MJ"
  A2A:0 "CoMJ"
