--- a/3362815204/localisation/GLP_l_french.yml
+++ b/3362815204/localisation/GLP_l_french.yml
@@ -900,6 +900,14 @@
  glp_save_edit_events.PROVMODIFADDA019:0 "Ajout de moins de tolerance des autres"
  glp_save_edit_events.PROVMODIFADDA020:0 "Bro is doomed!"
  glp_save_edit_events.PROVMODIFADDA022:0 "ajout de 5 unrest sur la province"
+ glp_save_edit_events.PROVMODIFADDA023:0 "Add bonus stab cost"
+ glp_save_edit_events.PROVMODIFADDA024:0 "Add bonus dev cost"
+ glp_save_edit_events.PROVMODIFADDA025:0 "Add bonus colonial range"
+ glp_save_edit_events.PROVMODIFADDA026:0 "Add bonus ship trade power"
+ glp_save_edit_events.PROVMODIFADDA027:0 "Add bonus ara siphoning"
+ glp_save_edit_events.PROVMODIFADDA028:0 "Add pearlsedge bonus"
+ glp_save_edit_events.PROVMODIFADDA029:0 "Add 666 heir"
+ glp_save_edit_events.PROVMODIFADDA030:0 "Add Reform Resistance bonus"
 
  glp_save_edit_events.EVTNAME44:0 "Suppression d'un modificateur"
  glp_save_edit_events.EVTDESC44:0 "Suppression d'un modificateur sur la province de [From.GetName]"
@@ -925,7 +933,15 @@
  glp_save_edit_events.PROVMODIFREMOVEA019:0 "Suppression mineur de FL naval"
  glp_save_edit_events.PROVMODIFREMOVEA020:0 "Suppression de moins de tolerance des autres"
  glp_save_edit_events.PROVMODIFREMOVEA021:0 "Suppression de u r doomed Bro!"
- glp_save_edit_events.PROVMODIFREMOVEA021:0 "Suppression de 5 unrest sur la province"
+ glp_save_edit_events.PROVMODIFREMOVEA022:0 "Suppression de 5 unrest sur la province"
+ glp_save_edit_events.PROVMODIFREMOVEA023:0 "Remove bonus stab cost"
+ glp_save_edit_events.PROVMODIFREMOVEA024:0 "Remove bonus dev cost"
+ glp_save_edit_events.PROVMODIFREMOVEA025:0 "Remove bonus colonial range"
+ glp_save_edit_events.PROVMODIFREMOVEA026:0 "Remove bonus ship trade power"
+ glp_save_edit_events.PROVMODIFREMOVEA027:0 "Remove bonus ara siphoning"
+ glp_save_edit_events.PROVMODIFREMOVEA028:0 "Remove pearlsedge bonus"
+ glp_save_edit_events.PROVMODIFREMOVEA029:0 "Remove 666 heir"
+ glp_save_edit_events.PROVMODIFREMOVEA030:0 "Remove Reform Resistance bonus"
 
  glp_gm_events.EVTNAME5:0 "Une opportunité §Gverte§!"
  glp_gm_events.EVTDESC5:0 "[Root.Monarch.GetTitle], la traite des esclaves connaît un essor fulgurant après la victoire contre la Marée verte. L'esclavage a été désigné comme la punition principale pour les orques. Les esclaves inondent les marchés : c'est l'occasion idéale d'acquérir une main-d'œuvre bon marché ou un esclave orque de prestige pour presque rien !"
