--- a/3362815204/localisation/anb_governments_l_english.yml
+++ b/3362815204/localisation/anb_governments_l_english.yml
@@ -375,7 +375,7 @@
  
 
  
- producing_wine_winelord:0 "Production of §YWine§!: §G+75.0%§!"
+ producing_wine_winelord:0 "Production of §YWine§ and §YChampagne§!: §G+75.0%§!"
  wine_lord_wine:0 "From Government Reforms"
  
  producing_livestock_frontier:0 "Production of §YLivestock§!: §G+50.0%§!"
