--- a/3362815204/localisation/anb_governments_l_french.yml
+++ b/3362815204/localisation/anb_governments_l_french.yml
@@ -375,7 +375,7 @@
  
 
  
- producing_wine_winelord:0 "Production de §YVin§! : §G+75.0%§!"
+ producing_wine_winelord:0 "Production de §YVin§ et de §YChampagne§! : §G+75.0%§!"
  wine_lord_wine:0 "Des Réformes Gouvernementales"
  
  producing_livestock_frontier:0 "Production de §YBétail§! : §G+50.0%§!"
