patch maj 10 janvier

--- a/3362815204/localisation/GLP_l_english.yml
+++ b/3362815204/localisation/GLP_l_english.yml
@@ -723,6 +723,11 @@
  glp_save_edit_events.EVTCAPACTIVEA61:0 "§GRemove the unluck modifier§!"
  glp_save_edit_events.EVTCAPACTIVEA62:0 "Add modifier of dev -10% for 10 years"
  glp_save_edit_events.EVTCAPACTIVEA63:0 "Add modifier of separatism -10y and -2 unrest for 10 years"
+ glp_save_edit_events.EVTCAPACTIVEA64:0 "Add minor power modifier"
+ glp_save_edit_events.EVTCAPACTIVEA65:0 "Add regional power modifier"
+ glp_save_edit_events.EVTCAPACTIVEA66:0 "Remove minor power modifier"
+ glp_save_edit_events.EVTCAPACTIVEA67:0 "Remove regional power modifier"
+
 
  glp_new_merc_company:0 "§YKnights of Round Table§! mercenary company is now available for 10 years to assist us in our military efforts!"
  glp_merc_company_expired:0 "§YKnights of Round Table§! Mercenary Company will be no longer available!"
@@ -795,6 +800,8 @@
  glp_save_edit_events.EVTREBELA07:0 "Spawn Vampire Rebels"
  glp_save_edit_events.EVTREBELA08:0 "Spawn Infernal Court Rebels"
  glp_save_edit_events.EVTREBELA09:0 "Spawn Human Racists Rebels"
+ glp_save_edit_events.EVTREBELA10:0 "Spawn Corinite Rebels"
+ glp_save_edit_events.EVTREBELA11:0 "Spawn Regent Court Rebels"
 
  glp_save_edit_events.EVTNAMEA37:0 "Size of the Rebel stack"
  glp_save_edit_events.EVTDESCA37:0 "Chose the size of the Rebel stack /n Number of regiments = (5+0.1*dev of the province)*(1+0.03 * tech level)*§RRebel stack§!"
@@ -1665,7 +1672,8 @@ glp_ship_trade_bonus:0 "Ship trade bonus"
 glp_yearly_tax:0 "Ara siphoning" 
 glp_pearl_of_abyss:0 "Pearl of abyss"
 glp_resistance_reform:0 "Reform Resistance bonus"
-
+glp_modifier_minor:0 "Puissance Mineur"
+glp_modifier_regional:0 "Puissance Regional"
 
  A1A:0 "MJ"
  A2A:0 "CoMJ"
