--- a/3362815204/localisation/GLP_l_french.yml
+++ b/3362815204/localisation/GLP_l_french.yml
@@ -721,6 +721,10 @@
  glp_save_edit_events.EVTCAPACTIVEA61:0 "§GRetire le modificateur de malchance§!"
  glp_save_edit_events.EVTCAPACTIVEA62:0 "Ajouter un modificateur de dev -10% pour 10 ans"
  glp_save_edit_events.EVTCAPACTIVEA63:0 "Ajouter un modificateur de separatisme -10ans et -2 d'agitatio pour 10 ans"
+ glp_save_edit_events.EVTCAPACTIVEA64:0 "Ajouter le modificateur de puissance mineur"
+ glp_save_edit_events.EVTCAPACTIVEA65:0 "Ajouter le modificateur de puissance regionale"
+ glp_save_edit_events.EVTCAPACTIVEA66:0 "Retire le modificateur de puissance mineur"
+ glp_save_edit_events.EVTCAPACTIVEA67:0 "Retire le modificateur de puissance regionale"
 
 
  glp_new_merc_company:0 "§YLes Chevaliers de la Table Ronde§! sont désormais disponibles pour 10 ans afin de nous aider dans nos efforts militaires !"
