pour maj 17 janvier

--- a/3362815204/localisation/GLP_l_english.yml
+++ b/3362815204/localisation/GLP_l_english.yml
@@ -965,6 +965,7 @@
  glp_save_edit_events.PROVMODIFADDA028:0 "Add pearlsedge bonus"
  glp_save_edit_events.PROVMODIFADDA029:0 "Add 666 heir"
  glp_save_edit_events.PROVMODIFADDA030:0 "Add Reform Resistance bonus"
+ glp_save_edit_events.PROVMODIFADDA031:0 "drekiriki buff exo suit"
 
  glp_save_edit_events.EVTNAME44:0 "Removing a modifier"
  glp_save_edit_events.EVTDESC44:0 "Removing a modifier from the province of [From.GetName]"
@@ -999,6 +1000,7 @@
  glp_save_edit_events.PROVMODIFREMOVEA028:0 "Remove pearlsedge bonus"
  glp_save_edit_events.PROVMODIFREMOVEA029:0 "Remove 666 heir"
  glp_save_edit_events.PROVMODIFREMOVEA030:0 "Remove Reform Resistance bonus"
+ glp_save_edit_events.PROVMODIFREMOVEA031:0 "Remove exo suit"
 
  glp_gm_events.EVTNAME5:0 "A §Ggreen§! opportunity"
  glp_gm_events.EVTDESC5:0 "[Root.Monarch.GetTitle]! A slave trade is booming after the victory of the greentide. Slavery has been pronounced as the main punishment for the orcs. Slaves are flowing the markets it's perfect opportunity to have a cheep labor or a fancy orcish slave at the house for almost nothing !"
