improved march buff

--- a/3362815204/localisation/GLP_l_french.yml
+++ b/3362815204/localisation/GLP_l_french.yml
@@ -913,6 +913,7 @@
  glp_save_edit_events.PROVMODIFADDA029:0 "Add 666 heir"
  glp_save_edit_events.PROVMODIFADDA030:0 "Add Reform Resistance bonus"
  glp_save_edit_events.PROVMODIFADDA031:0 "drekiriki buff exo suit"
+ glp_save_edit_events.PROVMODIFADDA032:0 "improved march"
 
  glp_save_edit_events.EVTNAME44:0 "Suppression d'un modificateur"
  glp_save_edit_events.EVTDESC44:0 "Suppression d'un modificateur sur la province de [From.GetName]"
@@ -948,6 +949,7 @@
  glp_save_edit_events.PROVMODIFREMOVEA029:0 "Remove 666 heir"
  glp_save_edit_events.PROVMODIFREMOVEA030:0 "Remove Reform Resistance bonus"
  glp_save_edit_events.PROVMODIFREMOVEA031:0 "Remove exo suit"
+ glp_save_edit_events.PROVMODIFREMOVEA032:0 "Remove improved march"
 
  glp_gm_events.EVTNAME5:0 "Une opportunité §Gverte§!"
  glp_gm_events.EVTDESC5:0 "[Root.Monarch.GetTitle], la traite des esclaves connaît un essor fulgurant après la victoire contre la Marée verte. L'esclavage a été désigné comme la punition principale pour les orques. Les esclaves inondent les marchés : c'est l'occasion idéale d'acquérir une main-d'œuvre bon marché ou un esclave orque de prestige pour presque rien !"
