--- a/3362815204/localisation/GLP_l_english.yml
+++ b/3362815204/localisation/GLP_l_english.yml
@@ -967,6 +967,12 @@
  glp_save_edit_events.PROVMODIFADDA030:0 "Add Reform Resistance bonus"
  glp_save_edit_events.PROVMODIFADDA031:0 "drekiriki buff exo suit"
  glp_save_edit_events.PROVMODIFADDA032:0 "improved march"
+ glp_save_edit_events.PROVMODIFADDA033:0 "Add bonus ship trade power2"
+ glp_save_edit_events.PROVMODIFADDA034:0 "Add bonus ship trade power3"
+ glp_save_edit_events.PROVMODIFADDA035:0 "Add bonus ship trade power4"
+ glp_save_edit_events.PROVMODIFADDA036:0 "Add bonus dwarven bunkerization" 
+ glp_save_edit_events.PROVMODIFADDA037:0 "Add bonus racial castes"
+ glp_save_edit_events.PROVMODIFADDA038:0 "Add bonus kobold dentist" 
 
  glp_save_edit_events.EVTNAME44:0 "Removing a modifier"
  glp_save_edit_events.EVTDESC44:0 "Removing a modifier from the province of [From.GetName]"
@@ -1003,6 +1009,12 @@
  glp_save_edit_events.PROVMODIFREMOVEA030:0 "Remove Reform Resistance bonus"
  glp_save_edit_events.PROVMODIFREMOVEA031:0 "Remove exo suit"
  glp_save_edit_events.PROVMODIFREMOVEA032:0 "Remove improved march"
+ glp_save_edit_events.PROVMODIFREMOVEA033:0 "Remove bonus ship trade power2"
+ glp_save_edit_events.PROVMODIFREMOVEA034:0 "Remove bonus ship trade power3"
+ glp_save_edit_events.PROVMODIFREMOVEA035:0 "Remove bonus ship trade power4"
+ glp_save_edit_events.PROVMODIFREMOVEA036:0 "Remove bonus dwarven bunkerization"
+ glp_save_edit_events.PROVMODIFREMOVEA037:0 "Remove bonus racial castes"
+ glp_save_edit_events.PROVMODIFREMOVEA038:0 "Remove bonus kobold dentist"
 
  glp_gm_events.EVTNAME5:0 "A §Ggreen§! opportunity"
  glp_gm_events.EVTDESC5:0 "[Root.Monarch.GetTitle]! A slave trade is booming after the victory of the greentide. Slavery has been pronounced as the main punishment for the orcs. Slaves are flowing the markets it's perfect opportunity to have a cheep labor or a fancy orcish slave at the house for almost nothing !"
@@ -1672,7 +1684,13 @@
 glp_stab_cost_bonus:0 "Stab cost bonus"
 glp_dev_cost_bonus:0 "Dev cost bonus"
 glp_colonial_range_bonus:0 "Colo range bonus" 
-glp_ship_trade_bonus:0 "Ship trade bonus" 
+glp_ship_trade_bonus:0 "Ship trade bonus"
+glp_ship_trade_bonus2:0 "Ship trade bonus2"
+glp_ship_trade_bonus3:0 "Ship trade bonus3"
+glp_ship_trade_bonus4:0 "Ship trade bonus4"
+glp_bunkerization_rubyhold:0 "Bunkerization naine"
+glp_vaengheim_racial_castes:0 "Racial caste bonus"
+glp_kobold_dentist:0 "Kobold dentist"
 glp_yearly_tax:0 "Ara siphoning" 
 glp_pearl_of_abyss:0 "Pearl of abyss"
 glp_resistance_reform:0 "Reform Resistance bonus"
