patch mission pearlsedge, modifier glp

--- a/3362815204/localisation/GLP_l_english.yml
+++ b/3362815204/localisation/GLP_l_english.yml
@@ -973,6 +973,9 @@
  glp_save_edit_events.PROVMODIFADDA036:0 "Add bonus dwarven bunkerization" 
  glp_save_edit_events.PROVMODIFADDA037:0 "Add bonus racial castes"
  glp_save_edit_events.PROVMODIFADDA038:0 "Add bonus kobold dentist" 
+ glp_save_edit_events.PROVMODIFADDA039:0 "Add Half improved march" 
+ glp_save_edit_events.PROVMODIFADDA040:0 "Add ring bearer" 
+ glp_save_edit_events.PROVMODIFADDA041:0 "Add Golden age with no all power cost" 
 
  glp_save_edit_events.EVTNAME44:0 "Removing a modifier"
  glp_save_edit_events.EVTDESC44:0 "Removing a modifier from the province of [From.GetName]"
@@ -1015,6 +1018,10 @@
  glp_save_edit_events.PROVMODIFREMOVEA036:0 "Remove bonus dwarven bunkerization"
  glp_save_edit_events.PROVMODIFREMOVEA037:0 "Remove bonus racial castes"
  glp_save_edit_events.PROVMODIFREMOVEA038:0 "Remove bonus kobold dentist"
+ glp_save_edit_events.PROVMODIFREMOVEA039:0 "Remove half improved march"
+ glp_save_edit_events.PROVMODIFREMOVEA040:0 "Remove ring bearer"
+ glp_save_edit_events.PROVMODIFREMOVEA041:0 "Remove golden age with no all power cost"
+
 
  glp_gm_events.EVTNAME5:0 "A §Ggreen§! opportunity"
  glp_gm_events.EVTDESC5:0 "[Root.Monarch.GetTitle]! A slave trade is booming after the victory of the greentide. Slavery has been pronounced as the main punishment for the orcs. Slaves are flowing the markets it's perfect opportunity to have a cheep labor or a fancy orcish slave at the house for almost nothing !"
