--- a/3362815204/localisation/GLP_l_english.yml
+++ b/3362815204/localisation/GLP_l_english.yml
@@ -975,7 +975,21 @@
  glp_save_edit_events.PROVMODIFADDA038:0 "Add bonus kobold dentist" 
  glp_save_edit_events.PROVMODIFADDA039:0 "Add Half improved march" 
  glp_save_edit_events.PROVMODIFADDA040:0 "Add ring bearer" 
- glp_save_edit_events.PROVMODIFADDA041:0 "Add Golden age with no all power cost" 
+ glp_save_edit_events.PROVMODIFADDA041:0 "Add Golden age with no all power cost"
+ glp_save_edit_events.PROVMODIFADDA042:0 "Add black lighthouse of bal verstek"
+ glp_save_edit_events.PROVMODIFADDA043:0 "Add jaddist zeal"
+ glp_save_edit_events.PROVMODIFADDA044:0 "Add healthy bank"
+ glp_save_edit_events.PROVMODIFADDA045:0 "Add corruvurian vampire asset"
+ glp_save_edit_events.PROVMODIFADDA046:0 "Add flag for wine and chapagne price"
+ glp_save_edit_events.PROVMODIFADDA047:0 "Add University of dentist"
+ glp_save_edit_events.PROVMODIFADDA048:0 "Add rampart corintari"
+ glp_save_edit_events.PROVMODIFADDA049:0 "Add forum des oenologue"
+ glp_save_edit_events.PROVMODIFADDA050:0 "Add Pachaine faishon"
+ glp_save_edit_events.PROVMODIFADDA051:0 "Add opium bomb"
+ glp_save_edit_events.PROVMODIFADDA052:0 "Add income of foreign sailor"
+ glp_save_edit_events.PROVMODIFADDA053:0 "Add sending foreign sailor"
+ glp_save_edit_events.PROVMODIFADDA054:0 "Add import pashaine faishon"
+ glp_save_edit_events.PROVMODIFADDA055:0 "Add export pashaine faishon"
 
  glp_save_edit_events.EVTNAME44:0 "Removing a modifier"
  glp_save_edit_events.EVTDESC44:0 "Removing a modifier from the province of [From.GetName]"
@@ -1021,6 +1035,16 @@
  glp_save_edit_events.PROVMODIFREMOVEA039:0 "Remove half improved march"
  glp_save_edit_events.PROVMODIFREMOVEA040:0 "Remove ring bearer"
  glp_save_edit_events.PROVMODIFREMOVEA041:0 "Remove golden age with no all power cost"
+ glp_save_edit_events.PROVMODIFREMOVEA042:0 "Remove black lighthouse of bal verstek"
+ glp_save_edit_events.PROVMODIFREMOVEA043:0 "Remove jaddist zeal"
+ glp_save_edit_events.PROVMODIFREMOVEA044:0 "Remove healthy bank"
+ glp_save_edit_events.PROVMODIFREMOVEA045:0 "Remove corruvurian vampire asset"
+ glp_save_edit_events.PROVMODIFREMOVEA046:0 "Remove flag for wine and chapagne price"
+ glp_save_edit_events.PROVMODIFREMOVEA047:0 "Remove University of dentist"
+ glp_save_edit_events.PROVMODIFREMOVEA048:0 "Remove rampart corintari"
+ glp_save_edit_events.PROVMODIFREMOVEA049:0 "Remove forum des oenologue"
+ glp_save_edit_events.PROVMODIFREMOVEA050:0 "Remove Pachaine faishon"
+ glp_save_edit_events.PROVMODIFREMOVEA051:0 "Remove opium bomb"
 
 
  glp_gm_events.EVTNAME5:0 "A §Ggreen§! opportunity"
@@ -1703,6 +1727,23 @@ glp_pearl_of_abyss:0 "Pearl of abyss"
 glp_resistance_reform:0 "Reform Resistance bonus"
 glp_modifier_minor:0 "Puissance Mineur"
 glp_modifier_regional:0 "Puissance Regional"
+glp_dekiriki_exo_squel:0 "dekiriki exo squel" 
+glp_improved_march:0 "improved march"  
+glp_bunkerization_rubyhold:0 "bunkerization rubyhold"  
+glp_vaengheim_racial_castes:0 "vaengheim racial castes"  
+glp_kobold_dentist:0 "kobold dentist"  
+glp_half_improved_march:0 "half improved march"  
+glp_posseseur_anneau:0 "posseseur anneau"  
+glp_golden_age_no_apc:0 "golden age no apc"  
+glp_black_lighthouse_of_bal_verstek:0 "black lighthouse of bal verstek"  
+glp_jaddist_zeal:0 "jaddist zeal"  
+glp_healthy_bank:0 "healthy bank"  
+glp_corruvurian_vampire_asset:0 "corruvurian vampire asset"  
+glp_university_dentist:0 "university dentist"  
+glp_rampart_corintari:0 "rampart corintari"  
+glp_forum_des_oenologue:0 "forum des oenologue"  
+glp_pachaine_fashion:0 "pachaine fashion"  
+glp_opium_bomb:0 "opium bomb"  
 
  A1A:0 "MJ"
  A2A:0 "CoMJ"
