--- a/3362815204/localisation/anb_tradegoods&event_l_french.yml
+++ b/3362815204/localisation/anb_tradegoods&event_l_french.yml
@@ -302,3 +302,8 @@
  anb_price.107.d:0 "https://www.youtube.com/watch?v=e_rPbaLmzSM"
  anb_price.107.a:0 "salakis au bon lait de brebis"
  SALAKIS_BREBISS:0 "salakis au bon lait de brebis"
+
+ anb_price.108.t:0 "Augmentation des prix du vin et du champagne"
+ anb_price.108.d:0 "Suite à la prolifération des cepage le vin est devenu plus prestigieux et cher"
+ anb_price.108.a:0 "Le vin coule à flot"
+ LENCENORIAN_CEPAGE:0 "Cépage lencenorien"
