--- a/3362815204/localisation/anb_tradegoods&event_l_english.yml
+++ b/3362815204/localisation/anb_tradegoods&event_l_english.yml
@@ -302,3 +302,8 @@
  anb_price.107.d:0 "https://www.youtube.com/watch?v=e_rPbaLmzSM"
  anb_price.107.a:0 "salakis au bon lait de brebis"
  SALAKIS_BREBISS:0 "salakis au bon lait de brebis"
+
+ anb_price.108.t:0 "Increased in wine and champagne price"
+ anb_price.108.d:0 "Following the proliferation of multiple cepage through the market wine become renewed and price skyrocketed"
+ anb_price.108.a:0 "Wine must flow"
+ LENCENORIAN_CEPAGE:0 "Lencenorian cepage"
