--- a/3362815204/localisation/GLP_l_english.yml
+++ b/3362815204/localisation/GLP_l_english.yml
@@ -988,8 +988,10 @@
  glp_save_edit_events.PROVMODIFADDA051:0 "Add opium bomb"
  glp_save_edit_events.PROVMODIFADDA052:0 "Add income of foreign sailor"
  glp_save_edit_events.PROVMODIFADDA053:0 "Add sending foreign sailor"
- glp_save_edit_events.PROVMODIFADDA054:0 "Add import pashaine faishon"
- glp_save_edit_events.PROVMODIFADDA055:0 "Add export pashaine faishon"
+ glp_save_edit_events.PROVMODIFADDA054:0 "Add income of foreign soldier"
+ glp_save_edit_events.PROVMODIFADDA055:0 "Add sending foreign soldier"
+ glp_save_edit_events.PROVMODIFADDA056:0 "Add import pashaine faishon"
+ glp_save_edit_events.PROVMODIFADDA057:0 "Add export pashaine faishon"
 
  glp_save_edit_events.EVTNAME44:0 "Removing a modifier"
  glp_save_edit_events.EVTDESC44:0 "Removing a modifier from the province of [From.GetName]"
@@ -1045,7 +1047,12 @@
  glp_save_edit_events.PROVMODIFREMOVEA049:0 "Remove forum des oenologue"
  glp_save_edit_events.PROVMODIFREMOVEA050:0 "Remove Pachaine faishon"
  glp_save_edit_events.PROVMODIFREMOVEA051:0 "Remove opium bomb"
-
+ glp_save_edit_events.PROVMODIFREMOVEA052:0 "Remove income of foreign sailor"
+ glp_save_edit_events.PROVMODIFREMOVEA053:0 "Remove sending foreign sailor"
+ glp_save_edit_events.PROVMODIFREMOVEA054:0 "Remove income of foreign soldier"
+ glp_save_edit_events.PROVMODIFREMOVEA055:0 "Remove sending foreign soldier"
+ glp_save_edit_events.PROVMODIFREMOVEA056:0 "Remove import pashaine faishon"
+ glp_save_edit_events.PROVMODIFREMOVEA057:0 "Remove export pashaine faishon"
 
  glp_gm_events.EVTNAME5:0 "A §Ggreen§! opportunity"
  glp_gm_events.EVTDESC5:0 "[Root.Monarch.GetTitle]! A slave trade is booming after the victory of the greentide. Slavery has been pronounced as the main punishment for the orcs. Slaves are flowing the markets it's perfect opportunity to have a cheep labor or a fancy orcish slave at the house for almost nothing !"
@@ -1743,7 +1750,11 @@ glp_university_dentist:0 "university dentist"
 glp_rampart_corintari:0 "rampart corintari"  
 glp_forum_des_oenologue:0 "forum des oenologue"  
 glp_pachaine_fashion:0 "pachaine fashion"  
-glp_opium_bomb:0 "opium bomb"  
+glp_opium_bomb:0 "opium bomb"
+glp_send_sailor:0 "Envois de marins"  
+glp_foreign_sailor:0 "Marins étrangers"
+glp_send_manpower:0 "Envois de troupes"
+glp_foreign_manpower:0 "Troupes étrangères"
 
  A1A:0 "MJ"
  A2A:0 "CoMJ"
