--- a/3362815204/localisation/GLP_l_french.yml
+++ b/3362815204/localisation/GLP_l_french.yml
@@ -914,6 +914,31 @@
  glp_save_edit_events.PROVMODIFADDA030:0 "Add Reform Resistance bonus"
  glp_save_edit_events.PROVMODIFADDA031:0 "drekiriki buff exo suit"
  glp_save_edit_events.PROVMODIFADDA032:0 "improved march"
+ glp_save_edit_events.PROVMODIFADDA033:0 "Add bonus ship trade power2"
+ glp_save_edit_events.PROVMODIFADDA034:0 "Add bonus ship trade power3"
+ glp_save_edit_events.PROVMODIFADDA035:0 "Add bonus ship trade power4"
+ glp_save_edit_events.PROVMODIFADDA036:0 "Add bonus dwarven bunkerization" 
+ glp_save_edit_events.PROVMODIFADDA037:0 "Add bonus racial castes"
+ glp_save_edit_events.PROVMODIFADDA038:0 "Add bonus kobold dentist" 
+ glp_save_edit_events.PROVMODIFADDA039:0 "Add Half improved march" 
+ glp_save_edit_events.PROVMODIFADDA040:0 "Add ring bearer" 
+ glp_save_edit_events.PROVMODIFADDA041:0 "Add Golden age with no all power cost"
+ glp_save_edit_events.PROVMODIFADDA042:0 "Add black lighthouse of bal verstek"
+ glp_save_edit_events.PROVMODIFADDA043:0 "Add jaddist zeal"
+ glp_save_edit_events.PROVMODIFADDA044:0 "Add healthy bank"
+ glp_save_edit_events.PROVMODIFADDA045:0 "Add corruvurian vampire asset"
+ glp_save_edit_events.PROVMODIFADDA046:0 "Add flag for wine and chapagne price"
+ glp_save_edit_events.PROVMODIFADDA047:0 "Add University of dentist"
+ glp_save_edit_events.PROVMODIFADDA048:0 "Add rampart corintari"
+ glp_save_edit_events.PROVMODIFADDA049:0 "Add forum des oenologue"
+ glp_save_edit_events.PROVMODIFADDA050:0 "Add Pachaine faishon"
+ glp_save_edit_events.PROVMODIFADDA051:0 "Add opium bomb"
+ glp_save_edit_events.PROVMODIFADDA052:0 "Add income of foreign sailor"
+ glp_save_edit_events.PROVMODIFADDA053:0 "Add sending foreign sailor"
+ glp_save_edit_events.PROVMODIFADDA054:0 "Add income of foreign soldier"
+ glp_save_edit_events.PROVMODIFADDA055:0 "Add sending foreign soldier"
+ glp_save_edit_events.PROVMODIFADDA056:0 "Add import pashaine faishon"
+ glp_save_edit_events.PROVMODIFADDA057:0 "Add export pashaine faishon"
 
  glp_save_edit_events.EVTNAME44:0 "Suppression d'un modificateur"
  glp_save_edit_events.EVTDESC44:0 "Suppression d'un modificateur sur la province de [From.GetName]"
@@ -950,6 +975,24 @@
  glp_save_edit_events.PROVMODIFREMOVEA030:0 "Remove Reform Resistance bonus"
  glp_save_edit_events.PROVMODIFREMOVEA031:0 "Remove exo suit"
  glp_save_edit_events.PROVMODIFREMOVEA032:0 "Remove improved march"
+ glp_save_edit_events.PROVMODIFREMOVEA040:0 "Remove ring bearer"
+ glp_save_edit_events.PROVMODIFREMOVEA041:0 "Remove golden age with no all power cost"
+ glp_save_edit_events.PROVMODIFREMOVEA042:0 "Remove black lighthouse of bal verstek"
+ glp_save_edit_events.PROVMODIFREMOVEA043:0 "Remove jaddist zeal"
+ glp_save_edit_events.PROVMODIFREMOVEA044:0 "Remove healthy bank"
+ glp_save_edit_events.PROVMODIFREMOVEA045:0 "Remove corruvurian vampire asset"
+ glp_save_edit_events.PROVMODIFREMOVEA046:0 "Remove flag for wine and chapagne price"
+ glp_save_edit_events.PROVMODIFREMOVEA047:0 "Remove University of dentist"
+ glp_save_edit_events.PROVMODIFREMOVEA048:0 "Remove rampart corintari"
+ glp_save_edit_events.PROVMODIFREMOVEA049:0 "Remove forum des oenologue"
+ glp_save_edit_events.PROVMODIFREMOVEA050:0 "Remove Pachaine faishon"
+ glp_save_edit_events.PROVMODIFREMOVEA051:0 "Remove opium bomb"
+ glp_save_edit_events.PROVMODIFREMOVEA052:0 "Remove income of foreign sailor"
+ glp_save_edit_events.PROVMODIFREMOVEA053:0 "Remove sending foreign sailor"
+ glp_save_edit_events.PROVMODIFREMOVEA054:0 "Remove income of foreign soldier"
+ glp_save_edit_events.PROVMODIFREMOVEA055:0 "Remove sending foreign soldier"
+ glp_save_edit_events.PROVMODIFREMOVEA056:0 "Remove import pashaine faishon"
+ glp_save_edit_events.PROVMODIFREMOVEA057:0 "Remove export pashaine faishon"
 
  glp_gm_events.EVTNAME5:0 "Une opportunité §Gverte§!"
  glp_gm_events.EVTDESC5:0 "[Root.Monarch.GetTitle], la traite des esclaves connaît un essor fulgurant après la victoire contre la Marée verte. L'esclavage a été désigné comme la punition principale pour les orques. Les esclaves inondent les marchés : c'est l'occasion idéale d'acquérir une main-d'œuvre bon marché ou un esclave orque de prestige pour presque rien !"
@@ -1617,6 +1660,42 @@
  glp_bad_tolerance_of_other:0 "hérétique et païen au buché"
  glp_doomed:0 "u r doomed Bro!"
  glp_malus_unrest_5:0 "Peuple révolté"
+glp_stab_cost_bonus:0 "Stab cost bonus"
+glp_dev_cost_bonus:0 "Dev cost bonus"
+glp_colonial_range_bonus:0 "Colo range bonus" 
+glp_ship_trade_bonus:0 "Ship trade bonus"
+glp_ship_trade_bonus2:0 "Ship trade bonus2"
+glp_ship_trade_bonus3:0 "Ship trade bonus3"
+glp_ship_trade_bonus4:0 "Ship trade bonus4"
+glp_bunkerization_rubyhold:0 "Bunkerization naine"
+glp_vaengheim_racial_castes:0 "Racial caste bonus"
+glp_kobold_dentist:0 "Kobold dentist"
+glp_yearly_tax:0 "Ara siphoning" 
+glp_pearl_of_abyss:0 "Pearl of abyss"
+glp_resistance_reform:0 "Reform Resistance bonus"
+glp_modifier_minor:0 "Puissance Mineur"
+glp_modifier_regional:0 "Puissance Regional"
+glp_dekiriki_exo_squel:0 "dekiriki exo squel" 
+glp_improved_march:0 "improved march"  
+glp_bunkerization_rubyhold:0 "bunkerization rubyhold"  
+glp_vaengheim_racial_castes:0 "vaengheim racial castes"  
+glp_kobold_dentist:0 "kobold dentist"  
+glp_half_improved_march:0 "half improved march"  
+glp_posseseur_anneau:0 "posseseur anneau"  
+glp_golden_age_no_apc:0 "golden age no apc"  
+glp_black_lighthouse_of_bal_verstek:0 "black lighthouse of bal verstek"  
+glp_jaddist_zeal:0 "jaddist zeal"  
+glp_healthy_bank:0 "healthy bank"  
+glp_corruvurian_vampire_asset:0 "corruvurian vampire asset"  
+glp_university_dentist:0 "university dentist"  
+glp_rampart_corintari:0 "rampart corintari"  
+glp_forum_des_oenologue:0 "forum des oenologue"  
+glp_pachaine_fashion:0 "pachaine fashion"  
+glp_opium_bomb:0 "opium bomb"
+glp_send_sailor:0 "Envois de marins"  
+glp_foreign_sailor:0 "Marins étrangers"
+glp_send_manpower:0 "Envois de troupes"
+glp_foreign_manpower:0 "Troupes étrangères"
 
  A1A:0 "MJ"
  A2A:0 "CoMJ"
