--- a/3362815204/localisation/GLP_l_english.yml
+++ b/3362815204/localisation/GLP_l_english.yml
@@ -468,6 +468,7 @@
  glp_save_edit_events.EVTBUFFA40:0 "-10 Crown land"
  glp_save_edit_events.EVTBUFFA41:0 "-1 Innovativeness"
  glp_save_edit_events.EVTBUFFA42:0 "1 Innovativeness"
+ glp_save_edit_events.EVTBUFFA43:0 "Trade 50 inno for 5 artificer capacity"
  
  glp_save_edit_events.EVTNAME17:0 "Spawn Generals for [From.Owner.GetName]"
  glp_save_edit_events.EVTDESC17:0 "Decide what kind of generals to spawn for [From.Owner.GetName]."
@@ -992,7 +993,14 @@
  glp_save_edit_events.PROVMODIFADDA055:0 "Add sending foreign soldier"
  glp_save_edit_events.PROVMODIFADDA056:0 "Add import pashaine faishon"
  glp_save_edit_events.PROVMODIFADDA057:0 "Add export pashaine faishon"
-
+ glp_save_edit_events.PROVMODIFADDA058:0 "Add country modifier harpy speed"
+ glp_save_edit_events.PROVMODIFADDA059:0 "Add harpy dev cost"
+ glp_save_edit_events.PROVMODIFADDA060:0 "Add trade negation of -200"
+ glp_save_edit_events.PROVMODIFADDA061:0 "Add malus prod for small country(-10%)"
+ glp_save_edit_events.PROVMODIFADDA062:0 "Add malus prod for the reach(-40%)"
+ glp_save_edit_events.PROVMODIFADDA063:0 "Add exeptional lencenorian wine"
+ glp_save_edit_events.PROVMODIFADDA064:0 "Add 60 flat tax"
+ 
  glp_save_edit_events.EVTNAME44:0 "Removing a modifier"
  glp_save_edit_events.EVTDESC44:0 "Removing a modifier from the province of [From.GetName]"
  glp_save_edit_events.PROVMODIFREMOVEZZ1:0 "Never mind"
@@ -1053,6 +1061,13 @@
  glp_save_edit_events.PROVMODIFREMOVEA055:0 "Remove sending foreign soldier"
  glp_save_edit_events.PROVMODIFREMOVEA056:0 "Remove import pashaine faishon"
  glp_save_edit_events.PROVMODIFREMOVEA057:0 "Remove export pashaine faishon"
+ glp_save_edit_events.PROVMODIFREMOVEA058:0 "Remove country modifier harpy speed"
+ glp_save_edit_events.PROVMODIFREMOVEA059:0 "Remove harpy dev cost"
+ glp_save_edit_events.PROVMODIFREMOVEA060:0 "Remove trade negation of -200"
+ glp_save_edit_events.PROVMODIFREMOVEA061:0 "Remove malus prod for small country(-10%)"
+ glp_save_edit_events.PROVMODIFREMOVEA062:0 "Remove malus prod for the reach(-40%)"
+ glp_save_edit_events.PROVMODIFREMOVEA063:0 "Remove exeptional lencenorian wine"
+ glp_save_edit_events.PROVMODIFREMOVEA064:0 "Remove 60 flat tax"
 
  glp_gm_events.EVTNAME5:0 "A §Ggreen§! opportunity"
  glp_gm_events.EVTDESC5:0 "[Root.Monarch.GetTitle]! A slave trade is booming after the victory of the greentide. Slavery has been pronounced as the main punishment for the orcs. Slaves are flowing the markets it's perfect opportunity to have a cheep labor or a fancy orcish slave at the house for almost nothing !"
