--- a/3362815204/localisation/GLP_l_french.yml
+++ b/3362815204/localisation/GLP_l_french.yml
@@ -466,6 +466,7 @@
  glp_save_edit_events.EVTBUFFA40:0 "-10 Terres de l'état"
  glp_save_edit_events.EVTBUFFA41:0 "-1 d'innovation"
  glp_save_edit_events.EVTBUFFA42:0 "1 d'innovation"
+ glp_save_edit_events.EVTBUFFA43:0 "echanger 50 inno contre 5 de capacité d'artificier"
 
  glp_save_edit_events.EVTNAME17:0 "Faire apparaître des généraux pour [From.Owner.GetName]"
  glp_save_edit_events.EVTDESC17:0 "Décidez quel type de généraux faire apparaître pour [From.Owner.GetName]."
