--- a/3362815204/localisation/GLP_l_english.yml
+++ b/3362815204/localisation/GLP_l_english.yml
@@ -1000,6 +1000,7 @@
  glp_save_edit_events.PROVMODIFADDA062:0 "Add malus prod for the reach(-40%)"
  glp_save_edit_events.PROVMODIFADDA063:0 "Add exeptional lencenorian wine"
  glp_save_edit_events.PROVMODIFADDA064:0 "Add 60 flat tax"
+ glp_save_edit_events.PROVMODIFADDA065:0 "Add flag for 2nd wine and champagne price"
  
  glp_save_edit_events.EVTNAME44:0 "Removing a modifier"
  glp_save_edit_events.EVTDESC44:0 "Removing a modifier from the province of [From.GetName]"
