--- a/3362815204/localisation/anb_tradegoods&event_l_english.yml
+++ b/3362815204/localisation/anb_tradegoods&event_l_english.yml
@@ -307,3 +307,8 @@
  anb_price.108.d:0 "Following the proliferation of multiple cepage through the market wine become renewed and price skyrocketed"
  anb_price.108.a:0 "Wine must flow"
  LENCENORIAN_CEPAGE:0 "Lencenorian cepage"
+
+ anb_price.109.t:0 "Increased in wine and champagne price"
+ anb_price.109.d:0 "Following the proliferation of multiple cepage through the market wine become renewed and price skyrocketed"
+ anb_price.109.a:0 "Wine must flow"
+ LENCENORIAN_CEPAGE:0 "Lencenorian cepage 2"
