--- a/3362815204/localisation/anb_tradegoods&event_l_french.yml
+++ b/3362815204/localisation/anb_tradegoods&event_l_french.yml
@@ -307,3 +307,8 @@
  anb_price.108.d:0 "Suite à la prolifération des cepage le vin est devenu plus prestigieux et cher"
  anb_price.108.a:0 "Le vin coule à flot"
  LENCENORIAN_CEPAGE:0 "Cépage lencenorien"
+
+ anb_price.109.t:0 "Augmentation des prix du vin et du champagne"
+ anb_price.109.d:0 "Suite à la prolifération des cepage le vin est devenu plus prestigieux et cher"
+ anb_price.109.a:0 "Le vin coule à flot"
+ LENCENORIAN_CEPAGE:0 "Cépage lencenorien 2"
