Correction de certains modifier et ajout des localisations françaises

--- a/3362815204/localisation/GLP_l_english.yml
+++ b/3362815204/localisation/GLP_l_english.yml
@@ -999,8 +999,9 @@
  glp_save_edit_events.PROVMODIFADDA061:0 "Add malus prod for small country(-10%)"
  glp_save_edit_events.PROVMODIFADDA062:0 "Add malus prod for the reach(-40%)"
  glp_save_edit_events.PROVMODIFADDA063:0 "Add exeptional lencenorian wine"
- glp_save_edit_events.PROVMODIFADDA064:0 "Add 60 flat tax"
+ glp_save_edit_events.PROVMODIFADDA064:0 "Add harpy flat tax"
  glp_save_edit_events.PROVMODIFADDA065:0 "Add flag for 2nd wine and champagne price"
+ glp_save_edit_events.PROVMODIFADDA066:0 "Add 4 diplomatic capacity"
  
  glp_save_edit_events.EVTNAME44:0 "Removing a modifier"
  glp_save_edit_events.EVTDESC44:0 "Removing a modifier from the province of [From.GetName]"
@@ -1068,7 +1069,8 @@
  glp_save_edit_events.PROVMODIFREMOVEA061:0 "Remove malus prod for small country(-10%)"
  glp_save_edit_events.PROVMODIFREMOVEA062:0 "Remove malus prod for the reach(-40%)"
  glp_save_edit_events.PROVMODIFREMOVEA063:0 "Remove exeptional lencenorian wine"
- glp_save_edit_events.PROVMODIFREMOVEA064:0 "Remove 60 flat tax"
+ glp_save_edit_events.PROVMODIFREMOVEA064:0 "Remove harpy flat tax"
+ glp_save_edit_events.PROVMODIFREMOVEA066:0 "Remove 4 diplomatic capacity"
 
  glp_gm_events.EVTNAME5:0 "A §Ggreen§! opportunity"
  glp_gm_events.EVTDESC5:0 "[Root.Monarch.GetTitle]! A slave trade is booming after the victory of the greentide. Slavery has been pronounced as the main punishment for the orcs. Slaves are flowing the markets it's perfect opportunity to have a cheep labor or a fancy orcish slave at the house for almost nothing !"
@@ -1771,6 +1773,13 @@ glp_send_sailor:0 "Envois de marins"
 glp_foreign_sailor:0 "Marins étrangers"
 glp_send_manpower:0 "Envois de troupes"
 glp_foreign_manpower:0 "Troupes étrangères"
+glp_harpy_speed:0 "Rapiditée des Harpies"
+glp_harpies_devcost:0 "Colonies de Harpies majeure"
+glp_trade_negation:0 "-200 de puissance commerciale"
+glp_small_country_less_prod:0 "Embargo de vertesk sur le petit pays"
+glp_the_reach_less_prod:0 "Embargo de vertesk sur the reach"
+glp_exeptional_lencenorian_wine:0 "Vin lencenorien exceptionnel"
+glp_harpy_tax:0 "L'argent des harpies qu'ils envoient à la maison"
 
  A1A:0 "MJ"
  A2A:0 "CoMJ"
