--- a/3362815204/localisation/GLP_l_french.yml
+++ b/3362815204/localisation/GLP_l_french.yml
@@ -940,6 +940,15 @@
  glp_save_edit_events.PROVMODIFADDA055:0 "Add sending foreign soldier"
  glp_save_edit_events.PROVMODIFADDA056:0 "Add import pashaine faishon"
  glp_save_edit_events.PROVMODIFADDA057:0 "Add export pashaine faishon"
+ glp_save_edit_events.PROVMODIFADDA058:0 "Add country modifier harpy speed"
+ glp_save_edit_events.PROVMODIFADDA059:0 "Add harpy dev cost"
+ glp_save_edit_events.PROVMODIFADDA060:0 "Add trade negation of -200"
+ glp_save_edit_events.PROVMODIFADDA061:0 "Add malus prod for small country(-10%)"
+ glp_save_edit_events.PROVMODIFADDA062:0 "Add malus prod for the reach(-40%)"
+ glp_save_edit_events.PROVMODIFADDA063:0 "Add exeptional lencenorian wine"
+ glp_save_edit_events.PROVMODIFADDA064:0 "Add harpy flat tax"
+ glp_save_edit_events.PROVMODIFADDA065:0 "Add flag for 2nd wine and champagne price"
+ glp_save_edit_events.PROVMODIFADDA066:0 "Add 4 diplomatic capacity"
 
  glp_save_edit_events.EVTNAME44:0 "Suppression d'un modificateur"
  glp_save_edit_events.EVTDESC44:0 "Suppression d'un modificateur sur la province de [From.GetName]"
@@ -994,6 +1003,14 @@
  glp_save_edit_events.PROVMODIFREMOVEA055:0 "Remove sending foreign soldier"
  glp_save_edit_events.PROVMODIFREMOVEA056:0 "Remove import pashaine faishon"
  glp_save_edit_events.PROVMODIFREMOVEA057:0 "Remove export pashaine faishon"
+ glp_save_edit_events.PROVMODIFREMOVEA058:0 "Remove country modifier harpy speed"
+ glp_save_edit_events.PROVMODIFREMOVEA059:0 "Remove harpy dev cost"
+ glp_save_edit_events.PROVMODIFREMOVEA060:0 "Remove trade negation of -200"
+ glp_save_edit_events.PROVMODIFREMOVEA061:0 "Remove malus prod for small country(-10%)"
+ glp_save_edit_events.PROVMODIFREMOVEA062:0 "Remove malus prod for the reach(-40%)"
+ glp_save_edit_events.PROVMODIFREMOVEA063:0 "Remove exeptional lencenorian wine"
+ glp_save_edit_events.PROVMODIFREMOVEA064:0 "Remove harpy flat tax"
+ glp_save_edit_events.PROVMODIFREMOVEA066:0 "Remove 4 diplomatic capacity"
 
  glp_gm_events.EVTNAME5:0 "Une opportunité §Gverte§!"
  glp_gm_events.EVTDESC5:0 "[Root.Monarch.GetTitle], la traite des esclaves connaît un essor fulgurant après la victoire contre la Marée verte. L'esclavage a été désigné comme la punition principale pour les orques. Les esclaves inondent les marchés : c'est l'occasion idéale d'acquérir une main-d'œuvre bon marché ou un esclave orque de prestige pour presque rien !"
@@ -1697,6 +1714,7 @@ glp_send_sailor:0 "Envois de marins"
 glp_foreign_sailor:0 "Marins étrangers"
 glp_send_manpower:0 "Envois de troupes"
 glp_foreign_manpower:0 "Troupes étrangères"
+
 
  A1A:0 "MJ"
  A2A:0 "CoMJ"
