GLP modifier for game

--- a/3362815204/localisation/GLP_l_english.yml
+++ b/3362815204/localisation/GLP_l_english.yml
@@ -1002,6 +1002,11 @@
  glp_save_edit_events.PROVMODIFADDA064:0 "Add harpy flat tax"
  glp_save_edit_events.PROVMODIFADDA065:0 "Add flag for 2nd wine and champagne price"
  glp_save_edit_events.PROVMODIFADDA066:0 "Add 4 diplomatic capacity"
+ glp_save_edit_events.PROVMODIFADDA067:0 "Add moral boost"
+ glp_save_edit_events.PROVMODIFADDA068:0 "Add vassal liberty desire"
+ glp_save_edit_events.PROVMODIFADDA069:0 "Add naval decadence"
+ glp_save_edit_events.PROVMODIFADDA070:0 "Add missionary strenght boost"
+ glp_save_edit_events.PROVMODIFADDA071:0 "Add backlash of nurael sugestion"
  
  glp_save_edit_events.EVTNAME44:0 "Removing a modifier"
  glp_save_edit_events.EVTDESC44:0 "Removing a modifier from the province of [From.GetName]"
@@ -1071,6 +1076,11 @@
  glp_save_edit_events.PROVMODIFREMOVEA063:0 "Remove exeptional lencenorian wine"
  glp_save_edit_events.PROVMODIFREMOVEA064:0 "Remove harpy flat tax"
  glp_save_edit_events.PROVMODIFREMOVEA066:0 "Remove 4 diplomatic capacity"
+ glp_save_edit_events.PROVMODIFREMOVEA067:0 "Remove moral boost"
+ glp_save_edit_events.PROVMODIFREMOVEA068:0 "Remove vassal liberty desire"
+ glp_save_edit_events.PROVMODIFREMOVEA069:0 "Remove naval decadence"
+ glp_save_edit_events.PROVMODIFREMOVEA070:0 "Remove missionary strenght boost"
+ glp_save_edit_events.PROVMODIFREMOVEA071:0 "Remove backlash of nurael sugestion"
 
  glp_gm_events.EVTNAME5:0 "A §Ggreen§! opportunity"
  glp_gm_events.EVTDESC5:0 "[Root.Monarch.GetTitle]! A slave trade is booming after the victory of the greentide. Slavery has been pronounced as the main punishment for the orcs. Slaves are flowing the markets it's perfect opportunity to have a cheep labor or a fancy orcish slave at the house for almost nothing !"
