Modifiers + Convention nurael + Correction MJ2

--- a/3362815204/localisation/GLP_l_english.yml
+++ b/3362815204/localisation/GLP_l_english.yml
@@ -1007,6 +1007,8 @@
  glp_save_edit_events.PROVMODIFADDA069:0 "Add naval decadence"
  glp_save_edit_events.PROVMODIFADDA070:0 "Add missionary strenght boost"
  glp_save_edit_events.PROVMODIFADDA071:0 "Add backlash of nurael sugestion"
+ glp_save_edit_events.PROVMODIFADDA072:0 "Add local manpower +50%"
+ glp_save_edit_events.PROVMODIFADDA073:0 "Add oiled orcs"
  
  glp_save_edit_events.EVTNAME44:0 "Removing a modifier"
  glp_save_edit_events.EVTDESC44:0 "Removing a modifier from the province of [From.GetName]"
@@ -1081,6 +1083,8 @@
  glp_save_edit_events.PROVMODIFREMOVEA069:0 "Remove naval decadence"
  glp_save_edit_events.PROVMODIFREMOVEA070:0 "Remove missionary strenght boost"
  glp_save_edit_events.PROVMODIFREMOVEA071:0 "Remove backlash of nurael sugestion"
+ glp_save_edit_events.PROVMODIFREMOVEA072:0 "Remove local manpower +50%"
+ glp_save_edit_events.PROVMODIFREMOVEA073:0 "Remove Oiled orc"
 
  glp_gm_events.EVTNAME5:0 "A §Ggreen§! opportunity"
  glp_gm_events.EVTDESC5:0 "[Root.Monarch.GetTitle]! A slave trade is booming after the victory of the greentide. Slavery has been pronounced as the main punishment for the orcs. Slaves are flowing the markets it's perfect opportunity to have a cheep labor or a fancy orcish slave at the house for almost nothing !"
@@ -1790,6 +1794,14 @@ glp_small_country_less_prod:0 "Embargo de vertesk sur le petit pays"
 glp_the_reach_less_prod:0 "Embargo de vertesk sur the reach"
 glp_exeptional_lencenorian_wine:0 "Vin lencenorien exceptionnel"
 glp_harpy_tax:0 "L'argent des harpies qu'ils envoient à la maison"
+glp_moral_boost:0 "Boost de moral"
+glp_leashs_lich:0 "désir de liberté réduit"
+glp_naval_decadence:0 "Intervention de Uelos"
+glp_zeal_milcorisa:0 "Boost missionaire"
+glp_backlach_of_nurael_sugestion:0 "Conséquances de la suggestion de nurael"
+glp_local_manpower_bonus:0 "Plus de manpower"
+glp_orc_oil:0 "Les orcs huilés"
+
 
  A1A:0 "MJ"
  A2A:0 "CoMJ"
